src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail10.jova
class Test{
public int main() {

    return 0;
    }
}

class Main {

  public String main() {

    return 0;
  }

}